--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,9 +3,19 @@
   "name": "Weather Warning System for Construction Sites - DSOA",
   "icons": [
     {
-      "src": "warning.svg",
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/svg+xml"
+      "type": "image/x-icon"
     },
     {  
       "src": "DSO_logo.png",
