--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "jwt-decode": "^2.2.0",
+    "axios-request-handler": "^1.0.3",
     "bootstrap": "^4.3.1",
+    "history": "^4.9.0",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
     "popper.js": "^1.14.7",
+    "prop-types": "^15.7.2",
+    "pubsub-js": "^1.7.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
@@ -22,7 +26,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://0.0.0.0:5000",
   "browserslist": [
     ">0.2%",
     "not dead",
