--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.1.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "pubsub-js": "^1.7.0",
+    "sequelize": "^5.1.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
