--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,14 @@
     "axios-request-handler": "^1.0.3",
     "bootstrap": "^4.3.1",
     "history": "^4.9.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
-    "pubsub-js": "^1.7.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
